--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@heroicons/react": "^1.0.5",
     "@types/react-google-recaptcha": "^2.1.2",
     "@walletconnect/web3-provider": "^1.7.1",
+    "@web3auth/web3auth": "^0.6.3",
     "axios": "^0.24.0",
     "ethers": "^5.5.3",
     "formik": "^2.2.9",
