--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.3.1",
     "cssnano": "^5.0.14",
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.1",
     "postcss": "^8.4.4",
     "tailwindcss": "^3.0.0",
     "typescript": "^4.5.4"
