turn player into component

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
+    "@svgr/webpack": "^6.2.1",
     "@types/react-google-recaptcha": "^2.1.2",
     "@walletconnect/web3-provider": "^1.7.1",
     "@web3auth/web3auth": "^0.6.3",
     "axios": "^0.24.0",
     "ethers": "^5.5.3",
     "formik": "^2.2.9",
+    "is-ipfs": "^6.0.2",
     "magic-sdk": "^8.0.1",
     "metamask-react": "^2.1.2",
     "moralis": "^1.2.3",
