--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@svgr/webpack": "^6.2.1",
+    "@tailwindcss/forms": "^0.5.2",
     "@types/react-google-recaptcha": "^2.1.2",
     "@walletconnect/web3-provider": "^1.7.1",
     "@web3auth/web3auth": "^0.6.3",
