--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@walletconnect/web3-provider": "^1.7.1",
     "@web3auth/web3auth": "^0.6.3",
     "axios": "^0.24.0",
+    "d3-drag": "^1.2.4",
+    "d3-force": "^2.0.1",
+    "d3-selection": "^1.4.0",
+    "d3-zoom": "^1.8.3",
     "ethers": "^5.5.3",
     "formik": "^2.2.9",
     "hls.js": "^1.1.5",
@@ -48,6 +52,6 @@
     "eslint-config-next": "12.1.1",
     "postcss": "^8.4.4",
     "tailwindcss": "^3.0.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.7.4"
   }
 }
