--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.3",
-    "@heroicons/react": "^1.0.5",
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "v1",
     "@svgr/webpack": "^6.2.1",
     "@tailwindcss/forms": "^0.5.2",
     "@types/react-google-recaptcha": "^2.1.2",
