--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "magic-sdk": "^8.0.1",
     "metamask-react": "^2.1.2",
     "moralis": "^1.2.3",
-    "next": "latest",
+    "next": "12.3",
     "nookies": "^2.5.2",
     "qr-code-styling": "^1.6.0-rc.1",
     "react": "^17.0.2",
