--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@svgr/webpack": "^6.2.1",
     "@tailwindcss/forms": "^0.5.2",
     "@types/react-google-recaptcha": "^2.1.2",
+    "@vercel/analytics": "^0.1.6",
     "@walletconnect/web3-provider": "^1.7.1",
     "@web3auth/web3auth": "^0.6.3",
     "axios": "^0.24.0",
