--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nookies": "^2.5.2",
     "qr-code-styling": "^1.6.0-rc.1",
     "react": "^17.0.2",
+    "react-blockies": "^1.4.1",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
