--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "v1",
+    "@mui/material": "^5.11.15",
     "@svgr/webpack": "^6.2.1",
     "@tailwindcss/forms": "^0.5.2",
     "@types/react-google-recaptcha": "^2.1.2",
