--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "react-moralis": "^1.2.1",
+    "react-query": "^3.39.3",
     "react-select": "^5.2.1",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.1.0",
